@@ -282,9 +282,11 @@ var propPaths = {
     "Router": "router",
     // Middleware
     "authBasic": "auth/basic",
+    "cascade": "cascade",
     "commonLogger": "commonlogger",
     "contentLength": "contentlength",
     "contentType": "contenttype",
+    "directory": "directory",
     "gzip": "gzip",
     "jsonp": "jsonp",
     "lint": "lint",
