@@ -18,13 +18,14 @@ module.exports = function (app, root, index) {
         throw new strata.Error("Invalid root directory");
     }
 
-    if (path.existsSync(root)) {
-        var stats = fs.statSync(root);
-        if (!stats.isDirectory()) {
-            throw new strata.Error('"' + root + '" is not a directory')
-        }
-    } else {
+    if (!path.existsSync(root)) {
         throw new strata.Error('Directory "' + root + '" does not exist');
+    }
+
+    var stats = fs.statSync(root);
+
+    if (!stats.isDirectory()) {
+        throw new strata.Error('"' + root + '" is not a directory');
     }
 
     if (index && typeof index == "string") {
@@ -32,7 +33,8 @@ module.exports = function (app, root, index) {
     }
 
     return function stat(env, callback) {
-        var fullPath = path.join(root, env.pathInfo);
+        var pathInfo = unescape(env.pathInfo),
+            fullPath = path.join(root, pathInfo);
 
         path.exists(fullPath, function (exists) {
             if (exists) {
