@@ -7,6 +7,7 @@ exports.capitalizedHeaderName = capitalizedHeaderName;
 exports.httpPropertyName = httpPropertyName;
 exports.reverseHttpPropertyName = reversePropertyName;
 exports.strftime = strftime;
+exports.byteSizeFormat = byteSizeFormat;
 exports.escapeRe = escapeRe;
 exports.isRe = isRe;
 exports.isEmptyObject = isEmptyObject;
@@ -190,6 +191,20 @@ function strftime(date, format) {
     }
 
     return format;
+}
+
+/**
+ * Returns a human-friendly string of the given byte size.
+ */
+function byteSizeFormat(size) {
+    var tier = size > 0 ? Math.floor(Math.log(size) / Math.log(1024)) : 0;
+    var n = size / Math.pow(1024, tier);
+
+    if (tier > 0) {
+        n = Math.floor(n * 10) / 10; // Preserve only 1 digit after decimal.
+    }
+
+    return String(n) + ["B", "K", "M", "G", "T"][tier];
 }
 
 /**
